lab1/Test/L1-A-4-26.cmm
float ( ) {
  float BPJegtg3H [ 1264030456 ] [ ] [ 1592709437 
    ] = FFZBe5W6S ( IstpDWcYoD ) [ vSbUZXN ] [ td2nD_wEBJldFbKjx3W 
    ] [ f0HRxuPNDUUSqhW3x ] / O / d_9sjfhpIAgOsU3UIhgC 
    / N + AiDt1i4QqEZqx41fLQd <= E == pc5gOSRZahyTB1b 
    <= kKTtGs9esxA3gXxEWSM0 && twOUyEz9xkhDaw4w7OX ;
  int Bi2qEwOUCQLI , ayRYOxc2Q [ ] ;
  int DhIphiyEyqi [ 832723304 ] = zRwXjn3ls 
  int zZ8qaLjzs4OQ = aRO4E1iceZf8 ;
{
    struct NYooKpTf40t0oMDnO5z hEnh20R6jfV [ 2132323977 
      ] [ 239371790 ] [ ] ;
    int NooII5 while = MTrshRMU1ofBQMd ;
    float zNPZV5_UuSb_i ( ;
struct   }  if ( - CtkrdbB4uFDl3wLbm7MO = TE_TsVsUB_ 
    )   rgL3y3Bk ;

  if ( jlgd )   X7DOhpqZ7KERKC ;
else   if ( JI )   if ( != Taa1VCQKXglE6UL )   if 
    ( lWNSTvQ )   xR2LjzO6CPCU ;




  return Z9I6T8dQup1 ;
}
